--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
 
 
 .left {
-    background-image: url('/images/image-product-desktop.jpg');
+    background-image: url('../images/image-product-desktop.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -168,7 +168,7 @@ footer {
 
 
     .left {
-        background-image: url('/images/image-product-mobile.jpg');
+        background-image: url('../images/image-product-mobile.jpg');
         min-height: 240px;
         border-radius: 10px 10px 0px 0px;
     }
