--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
 
 
 .left {
-    background-image: url('../images/image-product-desktop.jpg');
+    background-image: url('./images/image-product-desktop.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -168,12 +168,12 @@ footer {
 
 
     .left {
-        background-image: url('../images/image-product-mobile.jpg');
+        background-image: url('./images/image-product-mobile.jpg');
         min-height: 240px;
         border-radius: 10px 10px 0px 0px;
     }
 
-    .right {       
+    .right {
         border-radius: 0px 0px 10px 10px;
         padding: 24px;
         gap: 20px;
@@ -181,12 +181,12 @@ footer {
 
 
     .left,
-    .right{
+    .right {
         width: 100%;
     }
 
 
-    .btn{
+    .btn {
         width: 100%;
     }
 
